--- a/challenge/starter/css/style.css
+++ b/challenge/starter/css/style.css
@@ -3,8 +3,6 @@
 }
 
 body {
-  display: inline-block;
-  width: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -12,15 +10,6 @@ body {
 }
 
 /* Headers & Nav */
-h1 {
-  font-size: 250%;
-  width: 25%;
-  background-color: powderblue;
-  text-align: center;
-  line-height: -20px;
-  padding: 10px;
-}
-
 h1,
 h2,
 h3,
@@ -30,65 +19,61 @@ h6 {
   margin: 0;
 }
 
+p {
+  margin: 0;
+}
+
 header {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   flex-wrap: wrap;
+  padding: 5px 0;
   background-color: #353b47 ;
 }
 
-h2 {
-  font-size: 25px;
-  justify-content: left;
-  align-content: top;
-  padding-right: 10px;
-  margin: 30px;
-  color: slategray ;
-}
-
-h3 {
-  font-size: 20px;
-  background-color: powderblue;
-  text-align: center;
-  margin: -10px;
-}
-
-h4 {
+header h1 {
+  font-size: 30px;
+  width: 250px;
   display: flex;
-  flex-direction: column;
-  justify-items: center;
-  margin-bottom: 10px;
   background-color: powderblue;
-  padding-top: 20px;
-}
-
-p {
-  margin: 10px;
+  color: #353b47;
+  justify-content: flex-end;
+  padding-right: 1%;
 }
 
 li {
   list-style: none;
 }
-
-ul a {
-  color: powderblue ;
-  margin: 5px;
-}
-
 nav ul {
-display: flex;
-justify-content: right;
-min-width: 300px;
-margin: 50px;
-}
+  display: flex;
+  min-width: 300px;
+  justify-content: space-evenly;
+  position: absolute;
+  right: 0;
+  }
 
+nav a {
+  cursor: pointer;
+  color: powderblue;
+}
 
 /* Hero */
 .hero-banner {
-  display: flex;
-  justify-content: flex-end;
-  padding: 50px;
   background-image: url(../images/02-hero-bg.jpg);
+  background-size: cover;
+  height: 100px;
+}
+
+.hero-banner div {
+  position: absolute;
+  right: 50px;
+  top: 120px;
+  padding: 5px;
+  background-color: powderblue;
+}
+
+h2 {
+  color: dimgray;
 }
 
 /* Containers */
